# teste-gcp

./: Dockerfile  README.md  cloudbuild.yaml  pyproject.toml
src/: connection.py
